# aps-familial-relation-extractor

./: README.md  pyproject.toml
config/board_members_information_extractor/: model.json  parameters.json
processes/board_members_information_extractor/: process.py
processes/board_members_information_extractor/utils/: NerUtils.py  NreUtils.py  PdfUtils.py
